--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
     <body>
       <div class="container">
-        <div class="notification is-primary">
-          <p class="campo_hora"></p>
+        <div class="notification is-primary hora">
+          <span class="campo_hora"></span>
+        </div>
+
+        <div class="notification is-primary data">
+          <p class="campo_data"></p>
         </div>
       </div>
-
-      <button id="botao">informar hora</button>
     </body>
 
     <footer>
