--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           <p class="campo_data"></p>
         </div>
       </div>
+
+      <div class="botao-registra">
+        <button class="button is-medium is-outlined is-primary is-fullwidth">Registrar ponto</button>
+      </div>
     </body>
 
     <footer>
