--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
 
     <body>
       <div class="container">
-        <div class="notification is-primary hora">
-          <span class="campo_hora"></span>
-        </div>
-
         <div class="notification is-primary data">
           <p class="campo_data"></p>
+        </div>
+
+        <div class="notification is-primary hora">
+          <span class="campo_hora"></span>
         </div>
       </div>
 
       <div class="botao-registra">
-        <button class="button is-medium is-outlined is-primary is-fullwidth">Registrar ponto</button>
+        <button class="button is-medium is-outlined is-primary is-fullwidth botao">Registrar ponto</button>
       </div>
     </body>
 
     <footer>
       <script src="js/data-hora.js"></script>
+      <script src="js/registra-hora.js"></script>
     </footer>
 </html>
