--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
     <body>
       <div class="container">
-        <div class="notification is-primary data">
+        <div class="notification data">
           <p class="campo_data"></p>
         </div>
 
-        <div class="notification is-primary hora">
+        <div class="notification hora">
           <span class="campo_hora"></span>
         </div>
       </div>
 
       <div class="botao-registra">
-        <button class="button is-medium is-outlined is-primary is-fullwidth botao">Registrar ponto</button>
+        <button class="button is-medium is-outlined is-success is-fullwidth botao">Registrar horário</button>
       </div>
     </body>
 
