--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
     <footer>
       <script src="js/data-hora.js"></script>
       <script src="js/registra-hora.js"></script>
+
+      <p class="copy">&copy; Desenvolvido por Ângelo Hank</p>
     </footer>
 </html>
