removendo bootstrap e reorganizando diretórios

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,19 +2,14 @@
 <html>
     <head>
         <meta charset="utf=8" lang="PT-BR">
-        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="../style/reset.css">
         <link rel="stylesheet" href="bulma\css\bulma.css">
-        <!--<link rel="stylesheet" href="bulma\css\bulma-min.css"> -->
-        <link rel="stylesheet" href="style.css">
-        <title>Teste</title>
+        <link rel="stylesheet" href="../style/style.css">
+        <title>Pomodoro Timer</title>
     </head>
 
     <body>
       <div class="container">
-        <div class="notification data">
-          <p class="campo_data"></p>
-        </div>
-
         <div class="notification hora">
           <span class="campo_hora"></span>
         </div>
