feat: criando home page, com campo de tempo e botões de start e stop

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,15 +9,24 @@
     </head>
 
     <body>
-      <div class="container">
-        <div class="notification hora">
-          <span class="campo_hora"></span>
-        </div>
-      </div>
 
-      <div class="botao-registra">
-        <button class="button is-medium is-outlined is-success is-fullwidth botao">Registrar horário</button>
-      </div>
+      <header>
+        <h1>Pomodoro Timer</h1>
+        <!--TODO: adicionar icone de config-->
+      </header>
+
+      <main>
+        <span id="tempo-restante">25:00</span>
+
+        <div id="buttons-row">
+          <button class="btn start">Iniciar</button>
+          <button class="btn stop">Parar</button>
+        </div>
+      
+      </main>
+       
+
+
     </body>
 
     <footer>
