feat: criando atualizacao do tempo restante

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
         <span id="tempo-restante"></span>
 
         <div id="buttons-row">
-          <button class="btn start" id="startButton" onclick="countdown()">Iniciar</button>
+          <button class="btn start" id="startButton" onclick="updateCountdown()">Iniciar</button>
           <button class="btn stop">Parar</button>
         </div>
       
