feat: implentando stopCountdown

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,8 +18,8 @@
         <span id="tempo-restante"></span>
 
         <div id="buttons-row">
-          <button class="btn start" id="startButton" onclick="updateCountdown()">Iniciar</button>
-          <button class="btn stop">Parar</button>
+          <button class="btn start" id="startButton" onclick="startCountdown()">Iniciar</button>
+          <button class="btn stop" id="stopButton" onclick="stopCountdown()">Parar</button>
         </div>
       
       </main>
