criando botao de mudança de tema

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,15 @@
       <header>
         <h1>Pomodoro Timer</h1>
         <!--TODO: adicionar icone de config-->
+
+        <div id="switch-container">
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider"></span>
+          </label>
+          <span class="alterar-tema">Alterar tema</span> <!--TODO: alternar legenda entre claro/escuro-->
+        </div>
+        
       </header>
 
       <main>
